--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -120,4 +120,7 @@
         "when a user tries to pick up one of cards.\n\n"
     </string>
     <string name="title_activity_text_stuff">TextStuff</string>
+    <string name="title_activity_tab_demo">TabDemo</string>
+    <string name="action_settings">Settings</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 </resources>
